deploy/kubernetes/manifests/staging/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: drawio-staging
  labels:
    app: draw.io
    version: demov0
---
