deploy/kubernetes/manifests/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio-staging
  labels:
    app: draw.io
    version: demo1
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 8080
  selector:
    app: draw.io
---
